--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "aos": "^2.3.4",
     "framer-motion": "^12.10.0",
+    "lucide-react": "^0.508.0",
     "next-gen2": "file:",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
